# locate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  real_data.ipynb  test.ipynb  test_seg.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: data_ProCESS.ipynb  inference.ipynb  priors.ipynb  real_data.ipynb  segmentation.ipynb  test.ipynb  test_seg.ipynb
scripts/: evaluate_seg_ProCESS.py  infer_ProCESS.py  inference.py  run_segm.sh  segment_ProCESS.py  smooth.R  test_hmm.py  test_seg.py  utils.R
scripts/COLO829/: 1_get_data.R  run.sh
scripts/ProCESS/: evaluate_seg_ProCESS.py  infer_ProCESS.py  plot_cna.R  plot_segm.R  run_inf.sh  run_segm.sh  segment_ProCESS.py
scripts/organoid/: 1_get_data.R  run_data.sh
src/locate/: __init__.py  locate.py  model_checks.py  posterior.py  stopping_criteria.py  utils.py
src/locate/evaluation/: metric.py
src/locate/likelihoods/: ClonalLikelihood.py  JoinClonalLikelihood.py  SubClonalLikelihood.py  __init__.py
src/locate/models/: Clonal.py  JoinClonal.py  Model.py  SubClonal.py  __init__.py
src/locate/priors/: __init__.py  ploidy.py  purity.py
src/locate/segmentation/: __init__.py  data_import.py  multivariate_clasp.py  multivariate_segmentation.py
src/locate/segmentation/claspy/: __init__.py  clasp.py  nearest_neighbour.py  utils.py  validation.py
src/locate/simulations/: __init__.py  simulate.py  utils_simulations.py
tests/: test_locate.py
